@@ -48,6 +48,7 @@ NOTICE: Cross-cluster Shortcuts require you to not restart all your viewers at o
   - wise - handle empty config file on startup
   - wise - support ./ with value-actions
   - wise - support usersElasticsearchAPIKey
+  - esproxy - elasticsearchAPIKey and elasticsearchBasicAuth support
 
 3.0.0 2021/08/18
   - BREAKING - elasticsearch - ES 7.10.0 or later required
